<resources>
    <!--Labels-->
    <string name="app_name">Linky</string>
    <string name="top_folders">Top Folders</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="links">Links</string>
    <string name="search">Search</string>
    <string name="link_icon">Link Icon</string>
    <string name="next_folders">Next Folders</string>
    <string name="link_title">Title</string>
    <string name="link_subtitle">Subtitle</string>
    <string name="link_url">URL</string>
    <string name="pinned">Favorite</string>
    <string name="folder_name">Folder name</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="issues">Issues</string>
    <string name="contributors">Contributors</string>
    <string name="source_code">Source code</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="show_counter">Show views</string>
    <string name="folder_color_preview">Folder Color Preview</string>
    <string name="next_folder_color">Next Folder Color</string>
    <string name="previous_folder_color">Previous Folder Color</string>
    <string name="import_export">Import and Export</string>

    <!--Actions-->
    <string name="add_link">Add Link</string>
    <string name="add_new_link">Add new Link</string>
    <string name="show_add_options">Show add Options</string>
    <string name="add_link_option">Add Link Option</string>
    <string name="add_folder_option">Add Folder Option</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="copy">Copy</string>
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="imports">Import</string>
    <string name="export">Export</string>

    <!--Messages-->
    <string name="message_link_copy">Link copied</string>
    <string name="message_link_invalid">Can\'t open link url in the browser</string>
    <string name="message_link_deleted">Your link is deleted</string>
    <string name="message_links_empty">You have 0 Links</string>

    <string name="message_folders_empty">You have 0 Folders</string>

    <string name="message_data_imported">Data is imported Successfully</string>
    <string name="message_data_exported">Data is exported in Download directory Successfully</string>

    <string name="message_invalid_extension">Invalid File extensions</string>
    <string name="message_invalid_data_format">Invalid data format</string>
    <string name="message_invalid_export">Invalid export this data</string>

    <!--Counters-->
    <string name="folder_count">Folders: %1$d</string>
    <string name="links_count">Links: %1$d</string>
    <string name="version">Version %1$s</string>

    <!--Error Messages-->
    <!--Link Error Messages-->
    <string name="error_get_links">Can\'t find links</string>
    <string name="error_insert_link">Can\'t add this link</string>
    <string name="error_update_link">Can\'t update this link</string>
    <string name="error_delete_link">Can\'t delete this link</string>
    <string name="error_link_title_empty">Link title can\'t be empty</string>
    <string name="error_link_subtitle_empty">Link subtitle can\'t be empty</string>
    <string name="error_link_url_empty">Link url can\'t be empty</string>
    <string name="error_link_url_invalid">Link url is invalid</string>
    <string name="error_link_same_title">You have an existing link with same title</string>

    <!--Folder Error Messages-->
    <string name="error_get_top_folders">Can\'t find top folders</string>
    <string name="error_get_folders">Can\'t find folders</string>
    <string name="error_insert_folder">Can\'t add this folder</string>
    <string name="error_update_folder">Can\'t update this folder</string>
    <string name="error_delete_folder">Can\'t delete this folder</string>
    <string name="error_folder_name_empty">Folder name can\'t be empty</string>
    <string name="error_folder_name_small">Folder name can\'t be less than 3 characters</string>
    <string name="error_folder_same_name">You have an existing folder with same name</string>

    <!--Shortcuts-->
    <string name="folder_create">Create Folder</string>
    <string name="link_create">Create Link</string>
    <string name="total">Total</string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="telechargement_en_cours">Downloading...</string>
    <string name="play_media">Play in app</string>

    <string name="title_player_lib">player-lib</string>
    <string name="basic_audio_player">Basic Audio Player</string>
    <string name="handling_basic_audio_player">Handling Basic Audio Player</string>
    <string name="basic_audio_player_with_listener">Basic Audio Player with Listener</string>
    <string name="basic_audio_player_with_dash_media_source">Basic Audio Player with DASH Media Source</string>
    <string name="basic_audio_player_with_smooth_streaming">Basic Audio Player with Smooth Streaming</string>
    <string name="basic_audio_player_with_hls_media_source">Basic Audio Player with HLS Media Source</string>
    <string name="basic_audio_player_with_progressive_media_source">Basic Audio Player with Progressive Media Source</string>
    <string name="basic_audio_player_with_playlist">Basic Audio Player with Playlist</string>
    <string name="basic_audio_player_with_clip_loop_merge">Basic Audio Player with Clip Loop and Merge</string>
    <string name="playback_channel_name">Playback</string>
    <string name="playback_channel_description">Playback Descritpion</string>
    <string name="no_links">No links added yet</string>
    <string name="play_vlc">Play in VLC</string>
    <string name="vlc_not_installed">VLC is not available</string>
    <string name="views">views</string>
    <string name="are_you_sure_delete">Are you sure to delete this item ?</string>
    <string name="no">No</string>
    <string name="theme">Theme</string>
    <string name="systeme">System</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="language">Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="legal">Terms and conditions</string>
    <string name="les_termes_et_conditions_d_utilisation">the terms and conditions of use.</string>
    <string name="optimize_app">Optimize the app (clear cache)</string>
    <string name="fonctionality">Fonctionality</string>
    <string name="data">Data</string>
    <string name="clear_cach">Do you want to clear the app cache ?</string>
    <string name="yes">Yes</string>
    <string name="clear_links">Clear all links</string>
    <string name="cache_cleard">Cache cleared succesfully</string>
    <string name="clear_all_links">Do you want to clear all the links ?</string>
    <string name="links_cleared">All links cleared</string>
    <string name="folder_color">Folder color</string>
    <string name="add_folder">Add folder</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search_keyword">Search keyword</string>
</resources>