<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.link.LinkFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dimen10dp">

            <ImageView
                android:id="@+id/link_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/link_title"
                android:src="@drawable/ic_link" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link_title_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_below="@id/link_logo"
                app:startIconDrawable="@drawable/ic_pen"
                android:hint="@string/link_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/open_sans" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link_subtitle_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_below="@id/link_title_layout"
                app:startIconDrawable="@drawable/ic_pen"
                android:hint="@string/link_subtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link_subtitle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"

                    android:fontFamily="@font/open_sans" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link_url_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_below="@id/link_subtitle_layout"
                android:hint="@string/link_url"
                app:endIconDrawable="@drawable/ic_paste"
                app:startIconDrawable="@drawable/ic_link"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link_url_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/open_sans" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/folder_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/link_url_layout"
                android:layout_margin="@dimen/dimen5dp"
                android:hint="@string/folder_name"
                app:hintTextColor="@color/sky">

                <AutoCompleteTextView
                    android:id="@+id/folder_name_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/open_sans"
                    android:inputType="none"
                    android:text="@string/none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/link_pinned_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/folder_name_layout"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:layout_marginBottom="@dimen/dimen10dp"
                app:switchPadding="10dp"
                android:checked="false"
                android:text="@string/pinned"
                android:textSize="@dimen/dimen18sp"
                app:thumbTint="@color/sky"
                app:trackTint="@color/grey" />

            <TextView
                android:id="@+id/link_created_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/link_pinned_switch"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen5dp"
                android:layout_marginEnd="@dimen/dimen5dp"
                android:layout_marginBottom="@dimen/dimen5dp"
                android:fontFamily="@font/open_sans"
                android:gravity=""
                android:textColor="@color/grey"
                tools:text="Created at 000000" />

            <TextView
                android:id="@+id/link_updated_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/link_created_status"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen5dp"
                android:layout_marginEnd="@dimen/dimen5dp"
                android:layout_marginBottom="@dimen/dimen5dp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/grey"
                tools:text="Last Updated at 000000" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>